# AgentBudgeteer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
agent-budgeteer/: .gitignore  README.md  pyproject.toml
agent-budgeteer/bench/: README.md
agent-budgeteer/bench/tasks/: task_02_cross_cutting_rename.yaml  task_03_planning_heavy_design.yaml  task_05_independent_parallel_docs.yaml  task_07_debug_with_tests.yaml  task_09_architecture_decision.yaml  task_10_tight_budget.yaml
agent-budgeteer/src/budgeteer/: __init__.py  classifier.py
agent-budgeteer/src/budgeteer/adapters/: pciv_adapter.py
agent-budgeteer/src/budgeteer/fleet/: __init__.py  ledger.py  sharding.py  worker.py  worktree.py
agent-budgeteer/src/budgeteer/strategies/: base.py
agent-budgeteer/tests/: test_bench_runner.py  test_budget.py  test_classifier.py  test_pciv.py  test_single_agent.py
bench/: README.md  results.baseline.json  runner.py  smoke.py
bench/fixtures/: README.md
bench/live/: README.md  __init__.py  cassette.py  runner.py
bench/live/cassettes/: .gitkeep
bench/live/tasks/: task_01_reverse_string.yaml  task_02_reverse_string_azure.yaml
bench/swe_bench/: README.md  __init__.py  generate_instance_list.py  instances_v0_3.txt  runner.py
bench/tasks/: task_01_single_file_refactor.yaml  task_04_large_context_audit.yaml  task_06_multi_file_feature.yaml  task_08_migration_scripted.yaml
config/: policy.yaml
docs/: architecture.md  configuration.md  roadmap.md
docs/decisions/: 0001-decision-tree-not-classifier.md  0002-sqlite-ledger-for-fleet.md  0003-git-worktrees-not-branches-for-fleet.md  0004-shared-core-agentcore.md  0005-cross-run-budget-ledger.md
docs/plans/: v0.3-handoff-brief.md  v0.3-swe-bench-four-arm.md
src/budgeteer/: __init__.py  budget.py  cli.py  learning.py  policy.py  pricing.py  redaction.py  router.py  telemetry.py  types.py
src/budgeteer/adapters/: anthropic_adapter.py  azure_openai_adapter.py  pciv_adapter.py
src/budgeteer/fleet/: ledger.py  worktree.py
src/budgeteer/strategies/: fleet.py  pciv.py  single_agent.py
tests/: test_adapters_and_worktree.py  test_azure_live_cassette.py  test_azure_openai_adapter.py  test_budget.py  test_cassette_redaction.py  test_cli_e2e.py  test_cross_run_budget.py  test_doctor_and_logging.py  test_fleet.py  test_fleet_ledger_hardening.py  test_learning.py  test_live_bench_replay.py  test_metrics.py  test_pciv.py  test_policy.py  test_readme_examples.py  test_secret_redaction.py  test_single_agent.py  test_swe_bench_live_flag.py  test_swe_bench_problems_loader.py  test_swe_bench_runner.py
